# Krutogidon

./: .gitignore  README.md  pyproject.toml  stage_2.6.1.md  stage_2.6.2-2.7.md  stage_2.6.3.md  stage_2.6.md  task_1.md  task_2.5.md
data/processed/: cards_full.json  cards_full.xlsx  deck_manifest.json  effect_coverage.json  import_report.json  rules_summary.json  rules_text.txt
data/review/: cards_needs_review.json
docs/: decisions.md  effect_coverage.md  engine_architecture.md  import_pipeline.md  plan.md  plan_stage_2_5.md  plan_stage_2_6.md  plan_stage_2_6_1.md  plan_stage_2_6_2.md  plan_stage_2_6_3.md  progress_stage_1.md  progress_stage_2.md  progress_stage_2_5.md  progress_stage_2_6.md  progress_stage_2_6_1.md  progress_stage_2_6_2.md  progress_stage_2_6_3.md  rules_model.md
src/: __init__.py
src/agents/: __init__.py  base.py  random_agent.py
src/game/: __init__.py  card_text.py  data.py  deck_manifest.py  effect_coverage.py  effects.py  engine.py  enums.py  implemented_patterns.py  instances.py  legal_actions.py  mayhem.py  models.py  replay.py  replay_summary.py  (+7 more)
tests/: test_attacks.py  test_bespredel.py  test_card_instances.py  test_card_text.py  test_death.py  test_deck_manifest.py  test_defense.py  test_effect_coverage.py  test_effect_patterns.py  test_familiars.py  test_import_pipeline.py  test_legal_actions.py  test_legends.py  test_market.py  test_ongoing.py  test_pending_choices.py  test_phases.py  test_replay.py  test_scoring.py  test_serialization.py  test_setup.py  test_strict_mode.py  test_targeting.py  test_turn_flow.py  test_xlsx_cards.py
(+6 files in other folders)
